fix error dialog overlapping with grade

--- a/packages/core/src/components/exam/internal/ErrorIndicator.less
+++ b/packages/core/src/components/exam/internal/ErrorIndicator.less
@@ -1,7 +1,10 @@
-.error-indicator {
-  position: relative !important;
+.error-indicator-in-exam {
   border: none !important;
 
   box-shadow: 0px -2px 4px rgba(@grey-900, 0.15);
   border-radius: 8px 8px 0 0;
+}
+
+.error-indicator {
+  position: relative !important;
 }
